js/src/tests/test262/language/expressions/class/elements/syntax/early-errors/invalid-names/field-init-member-expression-bad-reference.js
DONOTEVALUATE
(
)
;
var
C
=
class
{
f
=
something
.
#
x
}
;
